# mcp_auto

./: .env.example  .gitignore  GUIA_CLI.md  README.md  app_streamlit.py  cli.py  main.py  pyproject.toml  requirements.txt  run.sh
docs/: README.md
notebooks/: demo.ipynb
scripts/: seed_data.py  seed_vehicles.py
src/: __init__.py  agent.py  database.py  mcp_client.py  mcp_server.py  models.py  repository.py
src/application/: agent.py  mcp_client.py
src/domain/: models.py
src/infrastructure/: database.py  mcp_server.py
tests/: test_agent.py  test_repository.py
