[project]
name = "mcp_auto"
version = "0.1.0"
description = "Desafio C2S: busca de veículos com MCP, agente e Streamlit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel>=0.0.22",
    "faker>=30.0.0",
    "fastmcp>=3.0.0",
    "mcp>=1.20.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-litellm>=0.2.0",
    "streamlit>=1.40.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
